--- a/AntiForgeryTokenModification/AntiForgeryChange/AntiForgeryChange/Views/Account/Register.cshtml
+++ b/AntiForgeryTokenModification/AntiForgeryChange/AntiForgeryChange/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
 ﻿@model AntiForgeryChange.Models.RegisterViewModel
+@using AntiForgeryChange.Common;
 @{
     ViewBag.Title = "Register";
 }
@@ -7,7 +8,7 @@
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-    @Html.AntiForgeryToken()
+    @Html.ModifiedAntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
