--- a/SampleWeb/FrescoPlay/FrescoPlayTest/FrescoPlayTest.Web/Views/Home/Index.cshtml
+++ b/SampleWeb/FrescoPlay/FrescoPlayTest/FrescoPlayTest.Web/Views/Home/Index.cshtml
@@ -1,31 +1,37 @@
-﻿@{
+﻿@model FrescoPlayTest.Web.Models.EnrollmentDetails
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Fresco Play quiz try </h1>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+@using (Html.BeginForm("GetQuestionDetail", "Home",FormMethod.Post, new { @id = "test" }))
+{
+    <div class="form-row">
+        <div class="col-md-4 mb-3">
+            <label for="enrid">Enrollment Id</label>
+            @Html.TextBoxFor(Model => Model.EnrolmentId, new { @id = "enrid" })
+        </div>
+        <div class="col-md-4 mb-3">
+            <label for="ContentId">Content Id</label>
+            @Html.TextBoxFor(Model => Model.ContentId, new { @id = "ContentId" })
+        </div>
+        <div class="col-md-4 mb-3">
+            <label for="ApiKey">Api Key</label>
+            @Html.TextBoxFor(Model => Model.ApiKey, new { @id = "ApiKey" })
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    
+    <button class="btn btn-primary" type="submit">Submit form</button>
+}
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        var test = "{\"enrollment_id\":477284,\"content_id\":2162,\"sections\":[{\"section_id\":219,\"questions\":[{\"question_id\":2349,\"answer_ids\":[8446]},{\"question_id\":2348,\"answer_ids\":[8444]},{\"question_id\":2351,\"answer_ids\":[8456]},{\"question_id\":2350,\"answer_ids\":[8452]}]}]}";
+        var check = test.replace(/"/g,'\"' );
+        alert(check);
+        //alert("9");
+    });
+</script>
